# fate

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: db.rs  decide.rs  main.rs  opt.rs  prompts.rs  queries.rs
