[package]
name = "fate"
version = "0.1.0"
authors = ["Jason Hills <jasonahills@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "*"
log = "*"
pretty_env_logger = "*"
rusqlite = { version = "*", features = ["bundled-full"] }
structopt = "*"

