[package]
name = "fate"
version = "0.1.0"
authors = ["Jason Hills <jasonahills@gmail.com>"]
description = "A small command line utility for following up on decisions"
license = "MIT"
keywords = ["productivity", "decision", "tracking"]
categories = ["command-line-utilities"]
repository = "https://github.com/jasonahills/fate"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "*"
chrono = "*"
log = "*"
pretty_env_logger = "*"
rusqlite = { version = "*", features = ["chrono"] }
structopt = "*"

[dev-dependencies]
tempfile = "*"